<?xml version="1.0"?>
<package format="2">
  <name>velocity_selector</name>
  <version>1.0.0</version>
  <description>The velocity_selector package</description>

  <maintainer email="dhanujarumesh@gmail.com">dhanuja</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/velocity_selector</url> -->

  <author email="dhanujarumesh@gmail.com">dhanuja</author>

  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
